--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+.epicodus{
+  color: #600b3b;
+  font-size: 28px;
+}
+
 .panel-default{
 margin-top: 35px;
 }
@@ -10,6 +15,7 @@ margin-top: 35px;
 }
 .btn-link{
   font-size: 23px;
+  font
 }
 #ruby{
   display: none;
