add css styling to html

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,33 @@ margin-top: 35px;
 #c-sharp{
   display: none;
 }
+#web_radio{
+  font-size: 19px;
+}
+#mobil_radio{
+  font-size: 19px;
+}
+#graphic_radio{
+  font-size: 19px;
+}
+#java_radio{
+  font-size: 19px;
+}
+#php_lang_radio{
+  font-size: 19px;
+}
+#scharp_lang_radio{
+  font-size: 19px;
+}
+#backend_radio{
+  font-size: 19px;
+}
+#frontend_radio{
+  font-size: 19px;
+}
+#ruby_lang_radio{
+  font-size: 19px;
+}
+#first_last_name{
+  ont-size: 19px;
+}
